--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
@@ -49,8 +53,9 @@ body::-webkit-scrollbar-thumb {
   backdrop-filter: blur(5px);
   position: fixed;
   z-index: 9999;
-  background-color: black;
-  background-opacity: 0.5;
+  background-color: white;
+  background-opacity: 50%;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .hamburger-line {
